--- a/public/views/shared/menu.html
+++ b/public/views/shared/menu.html
@@ -1,8 +1,11 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
+            <a class="navbar-brand" data-ng-href="/">Sign in</a>
             <a class="navbar-brand" data-ng-href=".">Home</a>
             <a class="navbar-brand" data-ng-href="pubs">Pubs</a>
+            <a class="navbar-brand" data-ng-href="mypubs" data-ng-if="app.isLoggedIn()">My pubs</a>
+            <button data-ng-if="app.isLoggedIn()" data-ng-click="app.logout()">Sign out</button>
         </div>
     </div>
 </div>
